// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountImagesViewInstanceGraphs Component should render a connected component with default props: connected 1`] = `
<AccountImagesViewInstanceGraphs
  dailyUsage={Array []}
  error={false}
  filter={
    Object {
      "query": Object {},
    }
  }
  filterId={1}
  fulfilled={false}
  getAccountImagesInstances={[Function]}
  instancesOpenshift={0}
  instancesRhel={0}
  pending={false}
  updateInstances={false}
/>
`;

exports[`AccountImagesViewInstanceGraphs Component should render a multiple states: error 1`] = `""`;

exports[`AccountImagesViewInstanceGraphs Component should render a multiple states: fulfilled 1`] = `
<CardGrid
  className=""
  fluid={true}
  matchHeight={true}
>
  <Row
    bsClass="row"
    className="row-cards-pf"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={6}
    >
      <Card
        accented={true}
        aggregated={false}
        aggregatedMini={false}
        cardRef={null}
        className="cloudmeter-utilization-graph fadein"
        matchHeight={true}
      >
        <CardHeading
          className=""
        >
          <CardTitle
            className=""
          >
            Red Hat Enterprise Linux
          </CardTitle>
        </CardHeading>
        <CardBody
          className=""
        >
          <div
            className="cloudmeter-card-info"
          >
            <strong>
              0
            </strong>
            <Label
              bsStyle="warning"
              type="default"
            >
              <abbr
                title="Red Hat Enterprise Linux"
              >
                RHEL
              </abbr>
            </Label>
             
            Instances
          </div>
        </CardBody>
      </Card>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={6}
    >
      <Card
        accented={true}
        aggregated={false}
        aggregatedMini={false}
        cardRef={null}
        className="cloudmeter-utilization-graph fadein"
        matchHeight={true}
      >
        <CardHeading
          className=""
        >
          <CardTitle
            className=""
          >
            Red Hat OpenShift Container Platform
          </CardTitle>
        </CardHeading>
        <CardBody
          className=""
        >
          <div
            className="cloudmeter-card-info"
          >
            <strong>
              0
            </strong>
            <Label
              bsStyle="primary"
              type="default"
            >
              <abbr
                title="Red Hat OpenShift Container Platform"
              >
                RHOCP
              </abbr>
            </Label>
             
            Instances
          </div>
        </CardBody>
      </Card>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={12}
    >
      <Card
        accented={true}
        aggregated={false}
        aggregatedMini={false}
        cardRef={null}
        className="cloudmeter-utilization-graph fadein"
        matchHeight={true}
      >
        <CardHeading
          className=""
        >
          <CardTitle
            className=""
          >
            Utilized hours
          </CardTitle>
        </CardHeading>
        <CardBody
          className=""
        >
          <div
            className="cloudmeter-card-grid"
          >
            <div
              className="cloudmeter-card-info"
            >
              <strong>
                0
              </strong>
              <Label
                bsStyle="warning"
                type="default"
              >
                <abbr
                  title="Red Hat Enterprise Linux"
                >
                  RHEL
                </abbr>
              </Label>
               
              Hrs
            </div>
            <div
              className="cloudmeter-card-info"
            >
              <strong>
                0
              </strong>
              <Label
                bsStyle="primary"
                type="default"
              >
                <abbr
                  title="Red Hat OpenShift Container Platform"
                >
                  RHOCP
                </abbr>
              </Label>
               
              <div
                className="cloudmeter-card-info__header"
              >
                Hrs
              </div>
            </div>
          </div>
        </CardBody>
      </Card>
    </Col>
  </Row>
</CardGrid>
`;

exports[`AccountImagesViewInstanceGraphs Component should render a multiple states: pending 1`] = `
<CardGrid
  className=""
  fluid={true}
  matchHeight={true}
>
  <Row
    bsClass="row"
    className="row-cards-pf"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={6}
    >
      <Card
        accented={false}
        aggregated={false}
        aggregatedMini={false}
        cardRef={null}
        className="cloudmeter-utilization-graph cloudmeter-utilization-graph-loading fadein"
        matchHeight={true}
      >
        <CardBody
          className=""
        >
          <Spinner
            className="blank-slate-pf-icon"
            inline={false}
            inverse={false}
            loading={true}
            size="sm"
          />
          <div
            className="text-center"
          >
            <small>
              Loading...
            </small>
          </div>
        </CardBody>
      </Card>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={6}
    >
      <Card
        accented={false}
        aggregated={false}
        aggregatedMini={false}
        cardRef={null}
        className="cloudmeter-utilization-graph cloudmeter-utilization-graph-loading fadein"
        matchHeight={true}
      >
        <CardBody
          className=""
        >
          <Spinner
            className="blank-slate-pf-icon"
            inline={false}
            inverse={false}
            loading={true}
            size="sm"
          />
          <div
            className="text-center"
          >
            <small>
              Loading...
            </small>
          </div>
        </CardBody>
      </Card>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={4}
      sm={12}
    >
      <Card
        accented={false}
        aggregated={false}
        aggregatedMini={false}
        cardRef={null}
        className="cloudmeter-utilization-graph cloudmeter-utilization-graph-loading fadein"
        matchHeight={true}
      >
        <CardBody
          className=""
        >
          <Spinner
            className="blank-slate-pf-icon"
            inline={false}
            inverse={false}
            loading={true}
            size="sm"
          />
          <div
            className="text-center"
          >
            <small>
              Loading...
            </small>
          </div>
        </CardBody>
      </Card>
    </Col>
  </Row>
</CardGrid>
`;

exports[`AccountImagesViewInstanceGraphs Component should render a non-connected component: non-connected 1`] = `
<div
  class="container-cards-pf container-fluid"
>
  <div
    class=""
  >
    <div
      class="row-cards-pf row"
    >
      <div
        class="col-md-4 col-sm-6"
      />
      <div
        class="col-md-4 col-sm-6"
      />
      <div
        class="col-md-4 col-sm-12"
      />
    </div>
  </div>
</div>
`;
